k8s/comentario/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comentario
  namespace: gitbok
  labels:
    app.kubernetes.io/name: comentario
    app.kubernetes.io/component: comment-system
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app.kubernetes.io/name: comentario
