k8s/comentario/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comentario
  namespace: gitbok
  labels:
    app.kubernetes.io/name: comentario
    app.kubernetes.io/component: comment-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  rules:
  - host: www.health-samurai.io
    http:
      paths:
      - backend:
          service:
            name: comentario
            port:
              number: 80
        path: /docs/futureblog/comentario(/|$)(.*)
        pathType: ImplementationSpecific
